--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build:dev": "cross-env NODE_ENV=development webpack --mode development",
-		"build": "cross-env NODE_ENV=production webpack --mode production",
+		"build:prod": "cross-env NODE_ENV=production webpack --mode production",
 		"start": "webpack-dev-server --mode development",
 		"typecheck": "tsc"
 	},
